fix: add @smilyspilly changes

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -412,14 +412,14 @@ svg{
 .section-title{
   text-transform: uppercase;
   font-family: 'Bangers', cursive;
-  font-size: 9.558528vh;
+  font-size: 9.5585vh;
   color: white;
   text-shadow: 5px 5px 1px rgba(0, 0, 0, 0.25);
   letter-spacing: 0.05em;
   position: relative;
 }
 .section-title p{
-  font-size: 8.558528vh;
+  font-size: 8.5585vh;
   font-family: 'Bangers', cursive;
   text-shadow: 5px 5px 1px rgba(0, 0, 0, 0.25);
 
@@ -453,34 +453,6 @@ svg{
   width: 40%;
 }
 
-/* Animation */
-@keyframes ShowAn {
-  from {
-    opacity: 1;
-  }
-  to{
-    opacity: 0;
-    display: none;
-  }
-}
-
-@keyframes HideAn {
-  from {
-    opacity: 0;
-  }
-  to{
-    opacity: 1;
-    display: flex;
-  }
-}
-
-.hide_animation{
-  animation: 0.4s forwards HideAn;
-}
-
-.show_animation{
-  animation: 0.4s forwards ShowAn;
-}
 
 /* Media Query (Mobile Pov)*/
 @media (max-width: 1262px){
